@@ -22,51 +22,4 @@
 
 #include <upnp.h>
 
-#if UPNP_VERSION < 10800
-/* emulate the libupnp 1.8 API with older versions */
-
-using UpnpDiscovery = Upnp_Discovery;
-
-#endif
-
-#if UPNP_VERSION < 10624
-#include "util/Compiler.h"
-
-gcc_pure
-static inline int
-UpnpDiscovery_get_Expires(const UpnpDiscovery *disco) noexcept
-{
-  return disco->Expires;
-}
-
-gcc_pure
-static inline const char *
-UpnpDiscovery_get_DeviceID_cstr(const UpnpDiscovery *disco) noexcept
-{
-  return disco->DeviceId;
-}
-
-gcc_pure
-static inline const char *
-UpnpDiscovery_get_DeviceType_cstr(const UpnpDiscovery *disco) noexcept
-{
-  return disco->DeviceType;
-}
-
-gcc_pure
-static inline const char *
-UpnpDiscovery_get_ServiceType_cstr(const UpnpDiscovery *disco) noexcept
-{
-  return disco->ServiceType;
-}
-
-gcc_pure
-static inline const char *
-UpnpDiscovery_get_Location_cstr(const UpnpDiscovery *disco) noexcept
-{
-  return disco->Location;
-}
-
-#endif
-
 #endif
